# syra

./: .gitignore  CMakeLists.txt  README.md
config/: client.conf  server.conf
doc/: extending.md  main.md
sample/: client.cpp  server.cpp
src/: chat.cpp  chat.hpp
syra/: CMakeLists.txt
syra/include/syra/: buffer.hpp  node.hpp  request.hpp  router.hpp
syra/include/syra/network/: adapter.hpp  socket.hpp  subif.hpp
syra/include/syra/utils/: log.hpp  path.hpp  utils.hpp
syra/src/: buffer.cpp  request.cpp  router.cpp  socket.cpp
syra/src/utils/: log.cpp  path.cpp  utils.cpp
